# PatrolRobot

./: CMakeLists.txt  package.xml
convex/patrol_robot/: LArm2-ch.txt  LArm4-ch.txt  LArm5-ch.txt  RArm0-ch.txt  RArm1-ch.txt  RArm3-ch.txt  RArm6-ch.txt  RArm7-ch.txt  lanklepitch-ch.txt  lankleroll-ch.txt  lhippitch-ch.txt  lhiproll-ch.txt  lkneepitch-ch.txt  ranklepitch-ch.txt  rankleroll-ch.txt  rhippitch-ch.txt  rhiproll-ch.txt  rhipyaw-ch.txt  rkneepitch-ch.txt  torso-ch.txt
meshes/: lanklepitch-ch.txt  lanklepitch.STL  lanklepitch.qc  lankleroll-ch.txt  lankleroll.qc  lelbowpitch-ch.txt  lelbowpitch.qc  lhippitch-ch.txt  lhippitch.qc  lhiproll-ch.txt  lhiproll.qc  lhipyaw.STL  lkneepitch-ch.txt  lkneepitch.qc  lshoulderpitch-ch.txt  lshoulderpitch.qc  lshoulderroll-ch.txt  lshoulderroll.qc  lshoulderyaw-ch.txt  lshoulderyaw.qc  lwristpitch-ch.txt  lwristpitch.STL  lwristpitch.qc  lwristroll-ch.txt  lwristroll.qc  ranklepitch-ch.txt  ranklepitch.STL  ranklepitch.qc  rankleroll-ch.txt  rankleroll.qc  relbowpitch-ch.txt  relbowpitch.qc  rhippitch-ch.txt  rhippitch.qc  rhiproll-ch.txt  rhiproll.qc  rhipyaw-ch.txt  rhipyaw.STL  rhipyaw.qc  rkneepitch-ch.txt  (+14 more)
module/: alias.yaml  module .yaml.bk  module.yaml
mujoco/: PatrolRobot.xml  PatrolRobot.yaml  patrol_robot.xml  patrol_robot.yaml
rsdf/: LeftFoot.rsdf  LeftHand.rsdf  R_hip_3.rsdf  RightFoot.rsdf  RightHand.rsdf
urdf/: PatrolRobot.urdf  PatrolRobot.urdf.bk  V1.3_AllDoF_WithoutTuiGan_URDF.csv  V1.4_AllDoF_WithoutTuiGan_XML.xml  patrol_robot.urdf
